[gd_scene load_steps=5 format=3 uid="uid://cyhbsirm3ltwq"]

[ext_resource type="Texture2D" uid="uid://d1uy7ql7mt64k" path="res://Assets/base_enemy.png" id="1_pgenn"]
[ext_resource type="Script" uid="uid://bmn423uybwrw6" path="res://Objects/Enemies/turret.gd" id="1_xwayi"]
[ext_resource type="AudioStream" uid="uid://dybefw3fii3bf" path="res://Assets/Instruments/NotePianoC#5.wav" id="3_7j0e1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwayi"]
size = Vector2(276, 276)

[node name="Turret" type="Node2D" node_paths=PackedStringArray("spriteEnemy", "TimerBlinkNode")]
script = ExtResource("1_xwayi")
spriteEnemy = NodePath("Sprite2D")
TimerBlinkNode = NodePath("TimerBlinkTurret")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.428, 0.428)
texture = ExtResource("1_pgenn")

[node name="TimerBlinkTurret" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.0347595, 1)
scale = Vector2(6.25, 6.075)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4)
scale = Vector2(1.03467, 1.09143)
shape = SubResource("RectangleShape2D_xwayi")

[node name="InstrumentPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7j0e1")
volume_db = -4.952

[connection signal="timeout" from="TimerBlinkTurret" to="." method="_on_timer_blink_turrettimeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_shooter_collision_area_2d_area_entered"]
